# PetPalVS

./: CMakeLists.txt  PetPal.pro  readme.md
qml/: Anpassungsbildschirm.qml  Bildungsschirm.qml  EmotionIndicator.qml  Erstellungsbildschirm.qml  Hauptbildschirm.qml  Interaktionsbildschirm.qml  Main.qml  MinispielBildschirm.qml  WeatherAPI.qml
src/: GUI.cpp  GUI.h  Haustier.cpp  Haustier.h  MainScreen.cpp  MainScreen.h  MainScreen.ui  MainWindow.cpp  MainWindow.h  MainWindow.ui  Pet.cpp  Pet.h  PetPal.cpp  PetPal.h  PetPal.ui  WeatherAPI.cpp  WeatherAPI.h  main.cpp
